# Hybrid-Debug-Linux-CortexM

./: alif+HE.cbuild-run.yml  alif.cbuild-idx.yml  alif.cbuild-set.yml
blinky/: .clangd  blinky.debug+HE.cbuild.yml
linux_app/: makefile
tmp/: .ninja_log  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake  roots.cmake
tmp/1/: .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json
tmp/blinky.debug+HE/: CMakeLists.txt  components.cmake  groups.cmake  toolchain.cmake
tmp/blinky.debug+HE/src/blinky.debug+HE-stamp/: blinky.debug+HE-configure-.cmake  blinky.debug+HE-database-.cmake  blinky.debug+HE-source_dirinfo.txt
tmp/blinky.debug+HE/tmp/: blinky.debug+HE-cfgcmd.txt  blinky.debug+HE-mkdirs.cmake
